# emnist-nn-scratch

./: .gitignore  README.md  build_data.py  dataset.py  network.py  neural_network.py  nn_tweaking.py  readme.md
cpp_neural_net/: CMakeLists.txt
cpp_neural_net/src/: main.cu
emnist/: dataset.py  neural_network.py  nn_tweaking.py
emnist/models/: weights_biases_S0.95_LR0.0005_BS32_E70_NC51_L1256_L2128.npz
models/: weights_biases_S_T1.0_LR0.001_BS16_E10_NC51_L120_L225.npz  weights_biases_S_T1.0_LR0.001_BS32_E10_NC51_L120_L225.npz  weights_biases_S_T1.0_LR0.001_BS32_E10_NC51_L130_L220.npz  weights_biases_S_T1.0_LR0.001_BS32_E10_NC51_L145_L230.npz  weights_biases_S_T1.0_LR0.001_BS32_E20_NC51_L120_L225.npz  weights_biases_S_T1.0_LR0.002_BS32_E10_NC51_L120_L225.npz  weights_biases_S_T1.1_LR0.001_BS32_E10_NC51_L120_L225.npz  weights_biases_S_T1.2000000000000002_LR0.001_BS32_E10_NC51_L120_L225.npz  weights_biases_S_T1.2_LR0.001_BS32_E10_NC51_L120_L225.npz
music/: interactive_music_classifier.py  network.ipynb  youtube_feature_extractor.py
